# FootScan

./: .env.example  .gitignore  README.md  README.zh-CN.md  hardhat.config.js  package-lock.json  package.json
contracts/: FoodScanCommunity.sol  FoodScanFactory.sol  FoodScanToken.sol
contracts-rust/: Cargo.toml
contracts-rust/src/: lib.rs  token.rs
scripts/: deploy.js
src/app/: .page.tsx.swp  client.ts  globals.css  layout.tsx  page.tsx
src/app/analyze/[id]/: page.tsx
src/app/community/: page.tsx
src/app/community/[postId]/: page.tsx
src/app/dashboard/[address]/: page.tsx
src/app/dashboard/[address]/[walletAddress]/: page.tsx
src/app/explore/: page.tsx
src/app/profile/: page.tsx
src/app/upload/: page.tsx
src/components/: AnalyzeSection.tsx  CampaignCard.tsx  ConnectButton.tsx  LanguageSwitch.tsx  Navbar.tsx
src/components/analysis/: AnalysisResult.tsx
src/components/badges/: BadgeIcon.tsx
src/components/common/: GenerativeImage.tsx
src/components/explore/: RecipeCard.tsx
src/components/profile/: Contributions.tsx  ProfileInfo.tsx  Settings.tsx  UploadHistory.tsx
src/constants/: contracts.ts  networks.ts
src/contexts/: LanguageContext.tsx
src/i18n/: config.tsx
src/i18n/locales/: en.ts  zh.ts
src/lib/: tokenUtils.ts  web3.ts
src/mock/: analysisData.ts  communityData.ts  exploreData.ts  profileData.ts
src/types/: analysis.ts  explore.ts  profile.ts
