[package]
edition = "2021"
name = "foodscan-contracts"
version = "0.1.0"

[dependencies]
alloy-primitives = "=0.7.6"
alloy-sol-macro-expander = "=0.7.6"
alloy-sol-types = "=0.7.6"
mini-alloc = "0.6.0"
stylus-sdk = "0.6.0"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
